# dear_spdlog

./: CMakeLists.txt  LICENSE  README.md  dear_spdlogger.cpp  dear_spdlogger.h
src/: dear_sink.cpp  dear_sink.h
